{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerDefault",
            "id": "367c3de2-ebd3-4a9c-8368-63ff62a0582a",
            "actions": [
                {
                    "name": "BasicMovement",
                    "type": "Button",
                    "id": "b7cb41a3-a531-474b-b923-f1c39d77a496",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "932f82b4-aa99-45ae-ad15-87b06d32637b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "BasicMovement",
                    "id": "8903b530-7463-42de-b7f5-2ca24e2ee121",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5b87da94-86ac-4a52-aab0-a02fbedd9386",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8316d142-38ab-4ed3-aa87-f88aef406128",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cbc8067-980e-43b6-95aa-141292b9372d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b778293b-7420-4862-8a5f-66b7219dae5e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bee3b5be-838f-4d42-abb2-42d90e6d34b0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}